<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_header_height"
            android:background="@color/background"
            android:fontFamily="@font/nissan_brand_bold"
            android:gravity="center"
            android:text="@string/attention"
            android:textColor="@color/white"
            android:textSize="@dimen/popup_header_text_size" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nissan_brand_regular"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/alert_msg39"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center">

            <Button
                android:id="@+id/btn_read"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_margin="1dp"
                android:background="@color/background"
                android:fontFamily="@font/nissan_brand_regular"
                android:text="@string/alert_msg40"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:gravity="center">

            <Button
                android:id="@+id/btn_already"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/background"
                android:fontFamily="@font/nissan_brand_regular"
                android:text="@string/alert_msg41"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>