<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/dialog_button_separator"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/great_not_great_text"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:padding="15dp"
            android:background="@color/background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_not_great"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="0.2dp"
                android:background="@color/background"
                android:gravity="center"
                android:text="@string/not_great"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/txt_great"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="0.2dp"
                android:background="@color/background"
                android:gravity="center"
                android:text="@string/great"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
