<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_size"
        android:background="@color/orange">

        <LinearLayout
            android:id="@+id/linear_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/txt_back_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_back"
                android:text="@string/back"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/relativelayout_back2"
            android:layout_toRightOf="@+id/linear_back"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/feedback"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/relativelayout_back2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_back"
                android:text="@string/back"
                android:textColor="@color/white"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitleField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/send_feedback_title"
                    android:textColor="@color/orange" />

                <EditText
                    android:id="@+id/send_feedback_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/send_feedback_title_bg"
                    android:cursorVisible="true"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="#363636"
                    android:textColorHint="#a69f9f"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDescriptionField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/send_feedback_description"
                    android:textColor="@color/orange" />

                <EditText
                    android:id="@+id/send_feedback_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/send_feedback_title_bg"
                    android:cursorVisible="true"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="10"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:textColor="#363636"
                    android:textColorHint="#a69f9f"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/send_feedback_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/send_feedback_button_bg"
                    android:padding="15dp"
                    android:text="@string/send_feedback_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>